# nodejs_cross_compile

./: LICENSE  README.en_US.md  README.md  cross_build.py
patches/: gyp_tools.patch  node_config.patch  node_src_ext_v8.patch  openssl_gyp.patch  v8_gypfiles.patch
v8_build/: android_args.gn  ios_args.gn
