# Build arguments go here.
# See "gn args <out_dir> --list" for available build arguments.
is_component_build = false
is_debug = false
dcheck_always_on = false
is_debug = false
target_cpu = "arm64"
v8_target_cpu = "arm64"
target_os = "android"
is_component_build = false
v8_static_library = true
v8_monolithic = true
v8_use_external_startup_data = false
symbol_level=0
strip_debug_info=true
is_clang = true
use_custom_libcxx=false
use_custom_libunwind=false
libcxx_is_shared=false
v8_enable_extensible_ro_snapshot= false
v8_enable_gdbjit= false
v8_enable_i18n_support= true
v8_enable_javascript_promise_hooks= true
v8_enable_lite_mode= false
v8_enable_maglev= true
v8_enable_v8_checks= false
v8_enable_turbofan=true
v8_enable_webassembly= true
v8_jitless = false
v8_optimized_debug= true
v8_promise_internal_field_count= true

# from node common.gypi
v8_enable_disassembler=true
v8_enable_object_print=true
v8_enable_handle_zapping=false
v8_use_siphash= true
v8_enable_hugepage=false
v8_enable_fast_mksnapshot=false
v8_enable_conservative_stack_scanning=false
v8_enable_direct_local=false
v8_enable_map_packing=false
v8_enable_sandbox=false
v8_enable_v8_checks=false
v8_enable_zone_compression=false
v8_use_perfetto=false

# different from common.gypi
v8_enable_31bit_smis_on_64bit_arch= true
v8_enable_pointer_compression= true
v8_enable_pointer_compression_shared_cage=true
# shared_readonly_heap with pointer_compression is not supported under ios
v8_enable_shared_ro_heap= false
